// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`views/OccupationsList renders empty list 1`] = `
<div>
  <ul
    class="css-1n9h91p"
    color="persianBlue"
  />
</div>
`;

exports[`views/OccupationsList renders experineces list 1`] = `
<div>
  <ul
    class="css-1n9h91p"
    color="persianBlue"
  >
    <li
      class="css-vh9q91"
      color="black"
    >
      Javascript
    </li>
    <li
      class="css-vh9q91"
      color="black"
    >
      Java
    </li>
  </ul>
</div>
`;

exports[`views/OccupationsList renders experineces list with button 1`] = `
<div>
  <ul
    class="css-1n9h91p"
    color="persianBlue"
  >
    <li
      class="css-ih35ai"
      color="black"
    >
      Javascript
    </li>
    <li
      class="css-ih35ai"
      color="black"
    >
      Java
    </li>
  </ul>
</div>
`;
